demo1-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-1-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-1-app
  template:
    metadata:
      labels:
        app: demo-1-app
    spec:
      containers:
        - name: demo-1-app
          image: muzimil:demo-1
          ports:
            - containerPort: 8080
          imagePullPolicy: Never
---

apiVersion: v1
kind: Service
metadata:
  name: demo-1-app
spec:
  selector:
    app: demo-1-app
  ports:
    - port: 8080
      name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-2-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-2-app
  template:
    metadata:
      labels:
        app: demo-2-app
    spec:
      containers:
        - name: demo-2-app
          image: muzimil:demo2-1
          ports:
            - containerPort: 8080
          imagePullPolicy: Never
---

apiVersion: v1
kind: Service
metadata:
  name: demo-2-app
spec:
  selector:
    app: demo-2-app
  ports:
    - port: 8080
      name: http
